# Lectures

./: pyproject.toml  readme.md
hw/P01/: P01.md  P01S.md
hw/P02/: P02.md  P02S.md
hw/P03/: P03.md  P03S.md
hw/P04/: P04.md  P04S.md
hw/P05/: P05.md  P05S.md
hw/P06/: P06.md  P06S.md
hw/P07/: P07.md  P07S.md
hw/P08/: P08.md  P08S.md
hw/P09/: P09.md  P09S.md
hw/P10/: P10.md  P10S.md
hw/P11/: P11.md  P11S.md
hw/P12/: P12.md  P12S.md
hw/P13/: ML3_playground.ipynb  P13.md  P13S.md
hw/P14/: P14.md  P14S.md
hw/P15/: P15.md  P15S.md
hw/P16/: P16.md  P16S.md
notebooks/: L01A_numpy.ipynb  L01B_md_sample.md  L01_intro_images.ipynb  L02_filtering.ipynb  L03A_gradients_edges.ipynb  L03B_frequency_sampling.ipynb  L04_pyramids.ipynb  L05_features_harris.ipynb  L06_feature_descriptors.ipynb  L07_feature_matching.ipynb  L08_projective_alignment1.ipynb  L09_alignment2.ipynb  L10_warp_blend.ipynb  L11_pinhole_zfromd.ipynb  L12_camera_matrix.ipynb  L13_planesweep.ipynb  L14_multiview_sfm.ipynb  L15_nerf.ipynb  L16_cnn_recognition.ipynb  L17_architectures_tasks.ipynb  L17_diffusion_demo.ipynb  L17_flow_matching_demo.ipynb  ML0_notes.md  ML1.ipynb  ML2.ipynb  ML3.ipynb
notes/: ML0_notes.md
src/: ML.py  features.py  filtering.py  geometry.py
