[project]
name = "cs1053-lectures"
version = "0.1.0"
description = "Computer Vision Lecture Materials"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
